fix spacing

--- a/styles/MobileTabBar.module.css
+++ b/styles/MobileTabBar.module.css
@@ -14,7 +14,7 @@
 }
 
 .icon {
-    padding-top: 14px;
+    margin: 14px;
     width: 1.3em;
 }
 
